<resources>
    <string name="app_name">WeatherApp</string>
    <string name="change_location">Change Location</string>
    <string name="SelectLocation">Select_Location</string>
    <string name="Select_Location">Select_Location</string>
    <string name="Weather_Forecast">Weather_Forecast</string>
    <string name="Weather">Weather</string>
    <string name="Temperature">Temperature</string>
    <string name="Condition">Condition</string>
    <string name="WindChill">WindChill</string>

</resources>
